# dynamic-neural-field-composer

./: .gitignore  CMakeLists.txt  README.md  rules-of-dev.md
dynamic-field-composer-lite/: CMakeLists.txt  CMakePresets.json  CMakeSettings.json  build.bat  install.bat
dynamic-field-composer-lite/data/: field_coupling_5_weights.txt  per - dec_decision field.txt  per - dec_perceptual field.txt  per - dec_weights.txt  per - out_output field.txt  per - out_perceptual field.txt  per - out_weights.txt  plot_learning_data.m  simulation.json  test.m
dynamic-field-composer-lite/data/architectures/: architecture-example-1.txt
dynamic-field-composer-lite/data/exports/: NeuralField_activation_2023-12-18_14-14-43.2443922.txt  NeuralField_activation_2023-12-18_14-20-53.8109411.txt  NeuralField_activation_2023-12-21_10-09-12.7655660.txt  plot_data.m
dynamic-field-composer-lite/data/inter-field-synaptic-connections/: field_coupling_5_weights.txt  per - out_output field.txt  per - out_perceptual field.txt  per - out_weights.txt
dynamic-field-composer-lite/data/simulations/: simulation_run sim read write to json.json  simulation_run_sim_read_write.json  simulation_test sim.json
dynamic-field-composer-lite/examples/: joint_task_model.cpp  run_convolution_test.cpp  run_element_factory.cpp  run_learning_wizard.cpp  run_sim.cpp  run_sim_element_factory.cpp  run_sim_headless.cpp  run_sim_read_architecture_from_file.cpp  run_sim_read_write.cpp  run_sim_test.cpp  run_testbench.cpp
dynamic-field-composer-lite/include/: dynamic-neural-field-composer.h
dynamic-field-composer-lite/include/application/: application.h
dynamic-field-composer-lite/include/architecture/: architecture-builder.h  architecture-file-handler.h  architecture_builder.h  architecture_file_handler.h
dynamic-field-composer-lite/include/elements/: activation_function.h  element.h  element_factory.h  element_parameters.h  field_coupling.h  gauss_field_coupling.h  gauss_kernel.h  gauss_stimulus.h  kernel.h  lateral_interactions.h  mexican_hat_kernel.h  neural_field.h  normal_noise.h
dynamic-field-composer-lite/include/exceptions/: exception.h
dynamic-field-composer-lite/include/logging/: logger.h
dynamic-field-composer-lite/include/mathtools/: convolution_fftw.h  convolution_std.h  fftw3.h  mathtools.h  timer.h
dynamic-field-composer-lite/include/simulation/: simulation.h  simulation_file_manager.h  visualization.h
dynamic-field-composer-lite/include/tools/: convlv.h  convolution_fftw.h  convolution_std.h  fourier.h  logger.h  math.h  profiling.h  utils.h
dynamic-field-composer-lite/include/user_interface/: centroid_monitoring_window.h  logger_window.h  plot_window.h  simulation_window.h  user_interface.h  user_interface_window.h
dynamic-field-composer-lite/include/utilities/: utilities.h
dynamic-field-composer-lite/include/wizards/: learning_wizard.h
dynamic-field-composer-lite/lib/: CMakeLists.txt  README.md
dynamic-field-composer-lite/lib/profiling-tools/: CMakeLists.txt  README.md  test-timer.cpp
dynamic-field-composer-lite/resources/: resource.h  resources.rc  resources.rc.in
dynamic-field-composer-lite/src/: dynamic-field-composer-lite.cpp
dynamic-field-composer-lite/src/application/: application.cpp
dynamic-field-composer-lite/src/architecture/: architecture-builder.cpp  architecture-file-handler.cpp  architecture_builder.cpp  architecture_file_handler.cpp
dynamic-field-composer-lite/src/elements/: activation_function.cpp  element.cpp  element_factory.cpp  element_parameters.cpp  field_coupling.cpp  gauss_field_coupling.cpp  gauss_kernel.cpp  gauss_stimulus.cpp  kernel.cpp  lateral_interactions.cpp  mexican_hat_kernel.cpp  neural_field.cpp  normal_noise.cpp
dynamic-field-composer-lite/src/exceptions/: exception.cpp
dynamic-field-composer-lite/src/logging/: logger.cpp
dynamic-field-composer-lite/src/mathtools/: convolution_fftw.cpp  convolution_std.cpp  mathtools.cpp  timer.cpp
dynamic-field-composer-lite/src/simulation/: simulation.cpp  simulation_file_manager.cpp  visualization.cpp
dynamic-field-composer-lite/src/tools/: convlv.cpp  convolution_fftw.cpp  fourier.cpp  logger.cpp  math.cpp  profiling.cpp  utils.cpp
dynamic-field-composer-lite/src/user_interface/: centroid_monitoring_window.cpp  element_window.cpp  logger_window.cpp  plot_window.cpp  (+3 more)
dynamic-field-composer-lite/tests/: CMakeLists.txt  test_application.cpp  test_architecture_builder.cpp  test_architecture_file_handler.cpp  test_clones.cpp  test_element.cpp  test_element_factory.cpp  test_field_coupling.cpp  test_gauss_field_coupling.cpp  test_gauss_kernel.cpp  test_gauss_stimulus.cpp  test_kernel.cpp  test_mexican_hat_kernel.cpp  test_neural_field.cpp  test_normal_noise.cpp  test_simulation.cpp  test_simulation_rw.cpp  test_user_interface.cpp  test_visualization.cpp
dynamic-neural-field-composer/: CMakeLists.txt  CMakeSettings.json  build.bat  build.sh
dynamic-neural-field-composer/examples/: complementary_action_selection.cpp  entry.cpp  ex_complementary_action_selection.cpp  ex_field_coupling_learning.cpp  ex_field_couplings.cpp  ex_gauss_and_field_couplings.cpp  ex_two_robot_team.cpp  field_coupling.cpp  joint_task_model.cpp  panda_robot_joint_task_model.cpp  pepper_robot_joint_task_model.cpp  run_element_factory.cpp  run_learning_wizard.cpp  run_sim.cpp  run_sim_headless.cpp  run_sim_read_write.cpp  run_testbench.cpp  test_agk.cpp  test_application.cpp  test_couplings.cpp  test_factory.cpp  test_nodegraph.cpp  test_plot.cpp  test_plot_control_window.cpp  test_simulation.cpp  test_visualization.cpp  testbench.cpp  two_robot_team.cpp
dynamic-neural-field-composer/include/: dynamic-neural-field-composer.h
dynamic-neural-field-composer/resources/: RCa03592  RCa21608  RDa03592  resources.rc
dynamic-neural-field-composer/src/: dynamic-neural-field-composer.cpp
dynamic-neural-field-composer/tests/: test_application.cpp  test_clones.cpp  test_element_factory.cpp  test_gauss_field_coupling.cpp  test_learning_wizard.cpp  test_mexican_hat_kernel.cpp  test_normal_noise.cpp  test_user_interface.cpp
(+213 files in other folders)
